# git2cvs

./: Cargo.toml  README.md  TODO.md
migrations/: V1__init.sql
src/: cvs.rs  database.rs  git.rs  main.rs  state.rs
