[package]
name = "git2cvs"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.42"
env_logger = "0.9.0"
filetime = "0.2.15"
git2 = "0.13.20"
lazy_static = "1.4.0"
log = "0.4.14"
refinery = { version = "0.6.0", features = ["rusqlite"] }
rusqlite = "0.25.3"
structopt = "0.3.22"
subprocess = "0.2.7"
sysconf = "0.3.4"
tempfile = "3.2.0"
